<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"

    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".view.ConfigurationActivity"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/welcome"
        android:textColor="@color/colorPrimaryText"
        android:textSize="18dp"
        android:gravity="center_horizontal"
        android:layout_marginTop="50dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/configuration"
        android:textColor="@color/colorSecondaryText"
        android:layout_marginTop="10dp"
        android:textSize="14dp"
        android:gravity="center_horizontal"
        />


    <EditText
        android:id="@+id/config_userId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:hint="@string/userId"
        android:textSize="14sp"
        android:gravity="center_horizontal"

        android:layout_marginTop="40dp"
        android:singleLine="true"
        android:imeOptions="actionNext"
        />


    <EditText
        android:id="@+id/config_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:hint="@string/location"
        android:textSize="14sp"
        android:gravity="center_horizontal"

        android:layout_marginTop="20dp"
        android:singleLine="true"
        android:imeOptions="actionDone"
        android:inputType="textCapSentences"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"

        android:text="Siguiente"
        android:textColor="@color/background"
        android:textSize="16sp"
        android:background="@color/colorPrimary"

        android:layout_marginTop="70dp"
        android:onClick="onClickNext"
        />

</LinearLayout>